{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 86,
  "lineage": "df61723b-1648-7b09-6f85-7666f21f928c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "brk-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkInterfaces/brk-nic",
            "internal_domain_name_suffix": "ek5yyyddvdiepgqs4beqbd4puc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/publicIPAddresses/brk-ip",
                "subnet_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-vmprivatelink"
              }
            ],
            "location": "eastus2",
            "name": "brk-nic",
            "private_ip_address": "10.0.1.68",
            "private_ip_addresses": [
              "10.0.1.68"
            ],
            "resource_group_name": "rg-databrk-fsi",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.brk-ip",
            "azurerm_resource_group.fsi-rg",
            "azurerm_subnet.vmsubnet",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "location": "eastus2",
            "name": "nsg-vm",
            "resource_group_name": "rg-databrk-fsi",
            "security_rule": [],
            "tags": {
              "Environment": "Demo",
              "Owner": "izo.fernando1001@gmail.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg",
            "location": "eastus2",
            "name": "fsi-nsg",
            "resource_group_name": "rg-databrk-fsi",
            "security_rule": [],
            "tags": {
              "Environment": "Demo",
              "Owner": "izo.fernando1001@gmail.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureActiveDirectory",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg/securityRules/AllowAAD",
            "name": "AllowAAD",
            "network_security_group_name": "fsi-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "rg-databrk-fsi",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.fsi-rg",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "azfrontdoor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureFrontDoor.Frontend",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg/securityRules/AllowAzureFrontDoor",
            "name": "AllowAzureFrontDoor",
            "network_security_group_name": "fsi-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "rg-databrk-fsi",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.fsi-rg",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/nsg-vm/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "nsg-vm",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "rg-databrk-fsi",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-vm",
            "azurerm_resource_group.fsi-rg",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "brk-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/publicIPAddresses/brk-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "brk-ip",
            "resource_group_name": "rg-databrk-fsi",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "plsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-privatelink",
            "name": "fsi-privatelink",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databrk-fsi",
            "virtual_network_name": "fsi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-private",
            "name": "fsi-private",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databrk-fsi",
            "virtual_network_name": "fsi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-oauth",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-private-oauth",
            "name": "fsi-private-oauth",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databrk-fsi",
            "virtual_network_name": "fsi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-public",
            "name": "fsi-public",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databrk-fsi",
            "virtual_network_name": "fsi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-oauth",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.192/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-public-oauth",
            "name": "fsi-public-oauth",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databrk-fsi",
            "virtual_network_name": "fsi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vmsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-vmprivatelink",
            "name": "fsi-vmprivatelink",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databrk-fsi",
            "virtual_network_name": "fsi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-private",
            "network_security_group_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg",
            "subnet_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-private"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.fsi-rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private-oauth",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-private-oauth",
            "network_security_group_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg",
            "subnet_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-private-oauth"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.fsi-rg",
            "azurerm_subnet.private-oauth",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-public",
            "network_security_group_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg",
            "subnet_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-public"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.fsi-rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public-oauth",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-public-oauth",
            "network_security_group_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/fsi-nsg",
            "subnet_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-public-oauth"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.fsi-rg",
            "azurerm_subnet.public-oauth",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-vmprivatelink",
            "network_security_group_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "subnet_id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet/subnets/fsi-vmprivatelink"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-vm",
            "azurerm_resource_group.fsi-rg",
            "azurerm_subnet.vmsubnet",
            "azurerm_virtual_network.this",
            "data.external.me"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/23"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "608cbf22-a863-47d0-9a12-f049008fcfa2",
            "id": "/subscriptions/e5155bb0-da77-40cb-9202-7a1c541490ef/resourceGroups/rg-databrk-fsi/providers/Microsoft.Network/virtualNetworks/fsi-vnet",
            "location": "eastus2",
            "name": "fsi-vnet",
            "resource_group_name": "rg-databrk-fsi",
            "tags": {
              "Environment": "Demo",
              "Owner": "izo.fernando1001@gmail.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.fsi-rg",
            "data.external.me"
          ]
        }
      ]
    }
  ]
}